fixed benefits vertical align+ impemented container in benefits

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -352,6 +352,7 @@ header {
 
 .benefit {
   display: flex;
+  align-items: center;
   padding: 13px 8px 13px 7px;
 }
 
